--- a/web/index.html
+++ b/web/index.html
@@ -3,100 +3,215 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Smart Lab Dashboard</title>
-  <link rel="stylesheet" href="styles.css">
-  
-  <!-- Include Plotly.js -->
-  <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
+  <title>Login Page</title>
+  <style>
+    :root {
+      --left-color: #242e4d;
+      --right-color: #897e79;
+      --green-dark: #35c3c1;
+      --green-light: #00d6b7;
+      --gray: #8f8f8f;
+      --gray-light: #f5f6f8;
+    }
+
+    * {
+      -webkit-font-smoothing: antialiased;
+      text-rendering: optimizeLegibility;
+    }
+
+    html, body { height: 100%; margin: 0; }
+    body {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      flex-direction: column;
+      position: relative;
+      background-image: url("./cobweb-921039.jpg");
+      background-size: cover;
+      background-position: center;
+      font-family: 'Roboto', helvetica, arial, sans-serif;
+      font-size: 1.5em;
+    }
+
+    h3 {
+      padding: 4px;
+      text-align: center;
+      margin-top: 0px;
+      margin-bottom: 12px;
+      margin-left: 7px;
+      margin-right: 7px;
+    }
+
+    .login-form {
+      width: 90%;
+      max-width: 20em;
+      padding: 1em 2em;
+      position: relative;
+      background: rgba(255, 255, 255, 0.9);
+      border-radius: 8px;
+      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    }
+
+    .flex-row {
+      display: flex;
+      margin-bottom: 1em;
+    }
+
+    .lf--label {
+      width: 2em;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      background: var(--gray-light);
+      cursor: pointer;
+    }
+
+    .lf--input {
+      flex: 1;
+      padding: 1em;
+      border: 1px solid var(--gray-light);
+      border-radius: 4px;
+      color: var(--gray);
+      font-size: 1rem;
+    }
+
+    .lf--submit {
+      display: block;
+      padding: 0.75em;
+      width: 100%;
+      background: linear-gradient(to right, var(--green-dark), var(--green-light));
+      border: 0;
+      color: #fff;
+      cursor: pointer;
+      font-size: 0.9em;
+      font-weight: 600;
+      text-align: center;
+      border-radius: 4px;
+      transition: transform 0.15s ease;
+    }
+
+    .lf--submit:hover {
+      transform: scale(1.05);
+    }
+
+    ::placeholder {
+      color: var(--gray);
+    }
+
+    .google-signin-btn {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background: #ffffff;
+    margin: 30px;
+    border: 30px;
+    border-radius: 50%;
+    width: 50px;
+    height: 50px;
+    cursor: pointer;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+    transition: background 0.3s ease;
+  }
+
+  .google-signin-btn:hover {
+    transform: scale(1.05);
+  }
+
+  .google-signin-btn img {
+    height: 24px;
+    width: 24px;
+  }
+
+  </style>
 </head>
 <body>
-  <div class="top-container">
-    <!-- Left Panel (Sensor Values) -->
-    <div class="left-panel">
-      <h2>Sensors</h2>
-      <div class="grid">
-        <div class="inner-box">
-          <p><strong>Air Quality</strong></p>
-          <p id="air-quality">98 %</p>
-        </div>
-        <div class="inner-box">
-          <p><strong>Brightness</strong></p>
-          <p id="brightness">200</p>
-        </div>
-        <div class="inner-box">
-          <p><strong>Temperature</strong></p>
-          <p id="temperature">20 °C</p>
-        </div>
-        <div class="inner-box">
-          <p><strong>Humidity</strong></p>
-          <p id="humidity">58 %</p>
-        </div>
-        <div class="inner-box">
-          <p><strong>Current</strong></p>
-          <p id="current">0.005 A</p>
-        </div>
-        <div class="inner-box">
-          <p><strong>Voltage</strong></p>
-          <p id="voltage">232 V</p>
-        </div>
-      </div>
+  <form class="login-form" id="loginForm">
+    <h3>Smart Lab</h3>
+    <div class="flex-row">
+      <label class="lf--label" for="username">
+        <svg x="0px" y="0px" width="12px" height="13px">
+          <path fill="#6D737F" d="M8.9,7.2C9,6.9,9,6.7,9,6.5v-4C9,1.1,7.9,0,6.5,0h-1C4.1,0,3,1.1,3,2.5v4c0,0.2,0,0.4,0.1,0.7 C1.3,7.8,0,9.5,0,11.5V13h12v-1.5C12,9.5,10.7,7.8,8.9,7.2z M4,2.5C4,1.7,4.7,1,5.5,1h1C7.3,1,8,1.7,8,2.5v4c0,0.2,0,0.4-0.1,0.6 l0.1,0L7.9,7.3C7.6,7.8,7.1,8.2,6.5,8.2h-1c-0.6,0-1.1-0.4-1.4-0.9L4.1,7.1l0.1,0C4,6.9,4,6.7,4,6.5V2.5z M11,12H1v-0.5 c0-1.6,1-2.9,2.4-3.4c0.5,0.7,1.2,1.1,2.1,1.1h1c0.8,0,1.6-0.4,2.1-1.1C10,8.5,11,9.9,11,11.5V12z"/>
+        </svg>
+      </label>
+      <input id="username" class="lf--input" placeholder="Username" type="text" required>
     </div>
+    <div class="flex-row">
+      <label class="lf--label" for="password">
+        <svg x="0px" y="0px" width="15px" height="5px">
+          <g>
+            <path fill="#6D737F" d="M6,2L6,2c0-1.1-1-2-2.1-2H2.1C1,0,0,0.9,0,2.1v0.8C0,4.1,1,5,2.1,5h1.7C5,5,6,4.1,6,2.9V3h5v1h1V3h1v2h1V3h1 V2H6z M5.1,2.9c0,0.7-0.6,1.2-1.3,1.2H2.1c-0.7,0-1.3-0.6-1.3-1.2V2.1c0-0.7,0.6-1.2,1.3-1.2h1.7c0.7,0,1.3,0.6,1.3,1.2V2.9z"/>
+          </g>
+        </svg>
+      </label>
+      <input id="password" class="lf--input" placeholder="Password" type="password" required>
+    </div>
+    <button id="email-login" class="lf--submit">Login with Email</button>
+  </form>
 
-    <!-- Right Panel (Appliance Controls) -->
-    <div class="right-panel">
-      <h2>Appliances</h2>
-      <div class="grid">
-        <div class="inner-box">
-          <label for="ac-slider" class="appliance-label">AC</label>
-          <input type="range" id="ac-slider" min="18" max="30" value="18">
-          <p><span id="ac-value">-</span>°C</p>
-        </div>
-        <div class="inner-box">
-          <label for="light-slider" class="appliance-label">Light</label>
-          <input type="range" id="light-slider" min="0" max="100" value="0">
-          <p><span id="light-value">-</span>%</p>
-        </div>
-        <div class="inner-box">
-          <label for="fan-toggle" class="appliance-label">Fan</label>
-          <div class="inner-box-fan">
-            <label class="switch">
-              <input type="checkbox" id="fan-toggle">
-              <span class="slider"></span>
-            </label>
-            <p><span id="fan-state">-</span></p>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
+  <button class="google-signin-btn" id="googleSignIn">
+  <img src="https://www.gstatic.com/firebasejs/ui/2.0.0/images/auth/google.svg" alt="Google Logo">
+  </button>
 
-  <!-- Bottom Section (Charts) -->
-  <div class="bottom-container">
-    <!-- Left Section for Voltage and Current -->
-    <div class="left-bottom">
-      <div class="chart-box">
-        <h3>Voltage (V) History</h3>
-        <div id="voltage-chart" class="chart"></div>
-      </div>
-      <div class="chart-box">
-        <h3>Current (A) History</h3>
-        <div id="current-chart" class="chart"></div>
-      </div>
-    </div>
-  
-    <!-- Right Section for Power -->
-    <div class="right-bottom">
-      <div class="chart-box">
-        <h3>Power (Watt) History</h3>
-        <div id="power-chart" class="chart"></div>
-      </div>
-    </div>
-  </div>
+  <script src="https://www.gstatic.com/firebasejs/9.21.0/firebase-app-compat.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.21.0/firebase-auth-compat.js"></script>
 
-  <div class="footer">
-    <p>2024 Smart Lab Dashboard</p>
-  </div>
-  
-  <script type="module" src="app.js"></script>
+  <script>
+    // Firebase configuration
+    const firebaseConfig = {
+      apiKey: "AIzaSyCGpbIhsDogNMAZkRlWdvhWjFfN39nxBfQ",
+      authDomain: "smart-lab-2025.firebaseapp.com",
+      databaseURL: "https://smart-lab-2025-default-rtdb.asia-southeast1.firebasedatabase.app",
+      projectId: "smart-lab-2025",
+      storageBucket: "smart-lab-2025.firebasestorage.app",
+      messagingSenderId: "503064583220",
+      appId: "1:503064583220:web:b67cd9dbc1b340ae96fe61",
+      measurementId: "G-C2W897SLE3",
+    };
+
+    // Initialize Firebase
+    const app = firebase.initializeApp(firebaseConfig);
+    const auth = firebase.auth();
+
+    // Google Sign-In
+    const googleSignInBtn = document.getElementById("googleSignIn");
+    googleSignInBtn.addEventListener("click", () => {
+      const provider = new firebase.auth.GoogleAuthProvider();
+      auth.signInWithPopup(provider)
+        .then((result) => {
+          window.location.href = "./index.html";
+        })
+        .catch((error) => {
+          console.error("Error during sign-in:", error.message);
+        });
+    });
+
+  document.getElementById('email-login').addEventListener('click', (event) => {
+  event.preventDefault(); // Prevent form submission
+
+  const email = document.getElementById('username').value;
+  const password = document.getElementById('password').value;
+
+  if (email && password) {
+    firebase.auth().signInWithEmailAndPassword(email, password)
+      .then((userCredential) => {
+        window.location.href = "./index.html";
+      })
+      .catch((error) => {
+        console.error('Error during email login:', error);
+        if (error.code === "auth/invalid-login-credentials") 
+        {
+          alert("Invalid login credentials. Please check your email and password");
+        }
+        else if (error.code === "auth/invalid-email") 
+        {
+          alert("Invalid email address");
+        }
+      });
+  } else {
+    alert('Please enter both email and password.');
+  }
+});
+  </script>
+
 </body>
 </html>
