--- a/web/index.html
+++ b/web/index.html
@@ -26,7 +26,7 @@
       justify-content: center;
       flex-direction: column;
       position: relative;
-      background-image: url("./cobweb-921039.jpg");
+      background-image: url("./background.jpg");
       background-size: cover;
       background-position: center;
       font-family: 'Roboto', helvetica, arial, sans-serif;
