--- a/web/mainpage.html
+++ b/web/mainpage.html
@@ -37,27 +37,27 @@
       <div class="grid">
         <div class="inner-box">
           <p><strong>Air Quality</strong></p>
-          <p id="air-quality">98 %</p>
+          <p id="air-quality">-- %</p>
         </div>
         <div class="inner-box">
           <p><strong>Brightness</strong></p>
-          <p id="brightness">200</p>
+          <p id="brightness">--</p>
         </div>
         <div class="inner-box">
           <p><strong>Temperature</strong></p>
-          <p id="temperature">20 °C</p>
+          <p id="temperature">-- °C</p>
         </div>
         <div class="inner-box">
           <p><strong>Humidity</strong></p>
-          <p id="humidity">58 %</p>
+          <p id="humidity">-- %</p>
         </div>
         <div class="inner-box">
           <p><strong>Current</strong></p>
-          <p id="current">0.005 A</p>
+          <p id="current">-- A</p>
         </div>
         <div class="inner-box">
           <p><strong>Voltage</strong></p>
-          <p id="voltage">232 V</p>
+          <p id="voltage">-- V</p>
         </div>
       </div>
     </div>
